--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@abgov/style-dictionary",
-  "version": "0.1.0",
+  "version": "0.0.0-development",
   "main": "./index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GovAlta/style-dictionary.git"
+    "url": "https://github.com/GovAlta/style-dictionary.git"
   },
   "keywords": [
     "GoA",
-    "Alberta Governmennt",
+    "Alberta Government",
     "DDI",
     "style",
     "dictionary",
@@ -17,17 +17,18 @@
   "devDependencies": {
     "jest": "^29.2.1",
     "rimraf": "^3.0.2",
+    "semantic-release": "^19.0.5",
     "style-dictionary": "^3.7.1"
   },
   "scripts": {
     "build": "node index.js",
-    "test": "jest",
-    "deploy": "npm run build && npm run test && npm publish"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "test": "jest && rimraf ./tmp",
+    "semantic-release": "semantic-release"
   },
   "bugs": {
     "url": "https://github.com/GovAlta/style-dictionary/issues"
+  },
+  "release": {
+    "branches": ["main"]
   }
 }
