--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "devDependencies": {
     "jest": "^29.2.1",
     "rimraf": "^3.0.2",
-    "semantic-release": "^19.0.5",
-    "style-dictionary": "^3.7.1"
+    "semantic-release": "^19.0.5"
   },
+  "dependencies": {
+    "style-dictionary": "^3.7.1"
+  }
   "scripts": {
     "build": "node index.js",
     "test": "jest && rimraf ./tmp",
