--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
             
       - name: Install Dependencies
-      - run: npm ci
+        run: npm ci
 
       - name: Build
         run: npm run build
