--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 ﻿# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-tmp
-
-#rider
-.idea
+/tmp
 
 # dependencies
 /node_modules
@@ -28,9 +25,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-package-lock.json
-/src/Styles/*.css
-/src/Styles/*.css.map
-
-/.idea/**/*
 ./dist
