--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -25,3 +25,10 @@ jobs:
         run: npm run test
       - name: Build
         run: npm run build
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v3.1.2
+        with: 
+          dry-run: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
