--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,8 +27,8 @@ jobs:
         run: npm run build
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3.1.2
-        with: 
-          dry-run: true
+        with:
+          dry_run: true
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
