--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,12 @@ jobs:
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3.1.2
         with:
-          branches: ["main", "dev"]
+          semantic_version: 16
+          branches: |
+            [
+              "main", 
+              { name: "dev", prerelease: true }
+            ]
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
