--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GovAlta/design-tokens.git"
+    "url": "git+https://github.com/GovAlta/design-tokens.git"
   },
   "keywords": [
     "GoA",
